--- a/src/components/MainTitle/style.module.scss
+++ b/src/components/MainTitle/style.module.scss
@@ -6,12 +6,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: $morning-blue;
+  background: $cosmic-cobalt;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: opacity 1000ms ease-in;
+  transition: opacity 800ms ease-in;
   &.xVisible{
     opacity: 0;
     z-index: -2;
@@ -25,7 +25,7 @@
   background-repeat: no-repeat;
   white-space: nowrap;
   font-size: 110px;
-  -webkit-text-stroke: 2px $princeton-orange;
+  -webkit-text-stroke: 1px $goldenrod;
   transition: all 200ms linear;
 }
 
@@ -37,7 +37,7 @@
   bottom: 20px;
   left: calc(50% - 50px);
   path{
-    fill: $princeton-orange;
+    fill: $goldenrod;
   }
   animation: bounce-top 2.2s ease 0s infinite alternate none;
 }
