--- a/styles/fragment/_color.scss
+++ b/styles/fragment/_color.scss
@@ -1,18 +1,20 @@
 
+
 /* SCSS HEX */
-$french-lilac: #885a89ff;
-$morning-blue: #8aa8a1ff;
-$lavender-gray: #cbcbd4ff;
-$tan: #d1b490ff;
-$princeton-orange: #ee7b30ff;
+$eerie-black: #191716ff;
+$goldenrod: #e6af2eff;
+$alabaster: #e0e2dbff;
+$cosmic-cobalt: #3d348bff;
+$khaki-web: #beb7a4ff;
+
 
 /* SCSS Gradient */
-$gradient-top: linear-gradient(0deg, #885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
-$gradient-right: linear-gradient(90deg, #885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
-$gradient-bottom: linear-gradient(180deg, #885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
-$gradient-left: linear-gradient(270deg, #885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
-$gradient-top-right: linear-gradient(45deg, #885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
-$gradient-bottom-right: linear-gradient(135deg, #885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
-$gradient-top-left: linear-gradient(225deg, #885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
-$gradient-bottom-left: linear-gradient(315deg, #885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
-$gradient-radial: radial-gradient(#885a89ff, #8aa8a1ff, #cbcbd4ff, #d1b490ff, #ee7b30ff);
+$gradient-top: linear-gradient(0deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-right: linear-gradient(90deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-bottom: linear-gradient(180deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-left: linear-gradient(270deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-top-right: linear-gradient(45deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-bottom-right: linear-gradient(135deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-top-left: linear-gradient(225deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-bottom-left: linear-gradient(315deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-radial: radial-gradient(#191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
