--- a/src/components/MainTitle/style.module.scss
+++ b/src/components/MainTitle/style.module.scss
@@ -1,79 +1,100 @@
 @import "../../../styles/fragment/index";
 
-.faMainTitle{
-	position: fixed;
+.faMainTitle {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: $cosmic-cobalt;
+  transition: all 400ms linear;
+  z-index: 2;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: opacity 800ms ease-in;
-  &.xVisible{
-    opacity: 0;
-    z-index: -2;
+  &.xVisible {
+    height: 100px;
+    h1 {
+      font-size: 50px;
+    }
+  }
+
+  h1 {
+    background-clip: text !important;
+    -webkit-background-clip: text !important;
+    color: transparent;
+    background-repeat: no-repeat;
+    white-space: nowrap;
+    font-size: 110px;
+    -webkit-text-stroke: 1px $goldenrod;
+    position: relative;
+    z-index: 2;
+    margin: 0 auto;
+    display: inline-block;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 400ms linear;
   }
 }
 
-.faMainTitle h1{
-  background-clip: text !important;
-  -webkit-background-clip: text !important;
-  color: transparent;
-  background-repeat: no-repeat;
-  white-space: nowrap;
-  font-size: 110px;
-  -webkit-text-stroke: 1px $goldenrod;
-  transition: all 200ms linear;
+.faMainTitle__bg {
+  background: $eerie-black;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  transition: height 600ms ease-in;
+
+  &.xVisibleBg {
+    height: 0;
+  }
 }
 
-.faMainTitle__close{
+.faMainTitle__close {
   cursor: pointer;
   width: 100px;
   height: 100px;
   position: absolute;
+  z-index: 2;
   bottom: 20px;
   left: calc(50% - 50px);
-  path{
+
+  path {
     fill: $goldenrod;
   }
+
   animation: bounce-top 2.2s ease 0s infinite alternate none;
 }
 
 @keyframes bounce-top {
-
   0% {
-    transform:translateY(0);
+    transform: translateY(0);
   }
   25% {
-    transform:translateY(0);
+    transform: translateY(0);
   }
   40% {
-    transform:translateY(-24px);
+    transform: translateY(-24px);
   }
   55% {
-    transform:translateY(0);
+    transform: translateY(0);
   }
   65% {
-    transform:translateY(-12px);
+    transform: translateY(-12px);
   }
   75% {
-    transform:translateY(0);
+    transform: translateY(0);
   }
   82% {
-    transform:translateY(-6px);
+    transform: translateY(-6px);
   }
   87% {
-    transform:translateY(0);
+    transform: translateY(0);
   }
   93% {
-    transform:translateY(-4px);
+    transform: translateY(-4px);
   }
   100% {
-    transform:translateY(0);
+    transform: translateY(0);
   }
 }
-
-
