--- a/styles/fragment/_color.scss
+++ b/styles/fragment/_color.scss
@@ -1,20 +1,73 @@
-
-
 /* SCSS HEX */
-$eerie-black: #191716ff;
-$goldenrod: #e6af2eff;
-$alabaster: #e0e2dbff;
-$cosmic-cobalt: #3d348bff;
-$khaki-web: #beb7a4ff;
-
+$eerie-black: #191716;
+$goldenrod: #e6af2e;
+$alabaster: #e0e2db;
+$cosmic-cobalt: #3d348b;
+$khaki-web: #beb7a4;
 
 /* SCSS Gradient */
-$gradient-top: linear-gradient(0deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
-$gradient-right: linear-gradient(90deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
-$gradient-bottom: linear-gradient(180deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
-$gradient-left: linear-gradient(270deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
-$gradient-top-right: linear-gradient(45deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
-$gradient-bottom-right: linear-gradient(135deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
-$gradient-top-left: linear-gradient(225deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
-$gradient-bottom-left: linear-gradient(315deg, #191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
-$gradient-radial: radial-gradient(#191716ff, #e6af2eff, #e0e2dbff, #3d348bff, #beb7a4ff);
+$gradient-top: linear-gradient(
+  0deg,
+  #191716,
+  #e6af2e,
+  #e0e2db,
+  #3d348b,
+  #beb7a4
+);
+$gradient-right: linear-gradient(
+  90deg,
+  #191716,
+  #e6af2e,
+  #e0e2db,
+  #3d348b,
+  #beb7a4
+);
+$gradient-bottom: linear-gradient(
+  180deg,
+  #191716,
+  #e6af2e,
+  #e0e2db,
+  #3d348b,
+  #beb7a4
+);
+$gradient-left: linear-gradient(
+  270deg,
+  #191716,
+  #e6af2e,
+  #e0e2db,
+  #3d348b,
+  #beb7a4
+);
+$gradient-top-right: linear-gradient(
+  45deg,
+  #191716,
+  #e6af2e,
+  #e0e2db,
+  #3d348b,
+  #beb7a4
+);
+$gradient-bottom-right: linear-gradient(
+  135deg,
+  #191716,
+  #e6af2e,
+  #e0e2db,
+  #3d348b,
+  #beb7a4
+);
+$gradient-top-left: linear-gradient(
+  225deg,
+  #191716,
+  #e6af2e,
+  #e0e2db,
+  #3d348b,
+  #beb7a4
+);
+$gradient-bottom-left: linear-gradient(
+  315deg,
+  #191716,
+  #e6af2e,
+  #e0e2db,
+  #3d348b,
+  #beb7a4
+);
+$gradient-radial: radial-gradient(#191716, #e6af2e, #e0e2db, #3d348b, #beb7a4);
