--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,3 +1,175 @@
-.xActive{
-  color: red;
+@import "../../../styles/fragment/index";
+
+$timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+$nav-width-desktop: 40em;
+$nav-width-mobile: 25em;
+$nav-item-nb: 6;
+
+.faHeader__button {
+  position: fixed;
+  opacity: 0;
 }
+.faHeader__label {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  &::before {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($eerie-black, 0.75);
+    content: "";
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s $timing-function;
+  }
+  .faHeader__burger {
+    position: fixed;
+    top: 1em;
+    left: 1em;
+    z-index: 3;
+    width: 2em;
+    height: 2em;
+    margin: 0;
+    padding: 0;
+    transition: opacity 0.5s $timing-function;
+    &::before,
+    .faHeader__bar,
+    &::after {
+      position: absolute;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 12%;
+      background: $goldenrod;
+      content: "";
+      transition: all 0.5s $timing-function;
+    }
+    .faHeader__bar {
+      top: 44%;
+    }
+    &::before {
+      top: 0;
+      transform-origin: top left;
+    }
+    &::after {
+      bottom: 0;
+      transform-origin: bottom left;
+    }
+  }
+}
+
+.faHeader__button:focus + .faHeader__label,
+.faHeader__label:hover {
+  .faHeader__burger {
+    opacity: 0.75;
+  }
+}
+
+.faHeader__nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  transform: translate3d(0, 0, 0); /* material acceleration */
+  transform: translateX(-100%);
+  will-change: transform;
+  transition: transform 0.5s $timing-function;
+  &::before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -200%;
+    z-index: -1;
+    width: $nav-width-mobile;
+    background: $khaki-web;
+    content: "";
+    transform: skewX(-10deg) translateX(-100%);
+    transform-origin: bottom left;
+    will-change: transform;
+    transition: transform 0.5s $timing-function;
+    @media (min-width: 40em) {
+      width: $nav-width-desktop;
+    }
+  }
+  a {
+    color: $eerie-black;
+    text-decoration: none;
+    transition: color 0.15s;
+    position: relative;
+    padding: 10px 60px 10px 20px;
+    text-transform: uppercase;
+    font-size: 20px;
+    &:before {
+      position: absolute;
+      content: "";
+      left: 0;
+      background-color: $eerie-black;
+      height: 100%;
+      width: 0;
+      overflow: hidden;
+      transition: width 0.14s ease-out;
+      z-index: -1;
+      top: 0;
+      transform: skewX(-10deg) translateX(-20px);
+    }
+    &:hover,
+    &:focus {
+      color: $khaki-web;
+
+      &:before {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.faHeader__button:checked {
+  & + .faHeader__label {
+    &::before {
+      opacity: 1;
+      pointer-events: auto;
+    }
+    .faHeader__burger {
+      &::before,
+      &::after {
+        width: 141.42%; // Pythagore!
+      }
+      &::before {
+        transform: rotate(45deg) translateY(-50%);
+        background-color: $eerie-black;
+      }
+      &::after {
+        transform: rotate(-45deg) translateY(50%);
+        background-color: $eerie-black;
+      }
+      .faHeader__bar {
+        transform: scale(0.1);
+        background-color: $eerie-black;
+      }
+    }
+  }
+  & ~ .faHeader__nav {
+    transform: translateX(0);
+    &::before {
+      transform: skewX(-10deg) translateX(0);
+    }
+    a {
+      transform: translateX(0);
+    }
+  }
+}
+
+/* misc */
