--- a/src/components/MainTitle/style.module.scss
+++ b/src/components/MainTitle/style.module.scss
@@ -7,16 +7,20 @@
   width: 100%;
   height: 100%;
   transition: all 400ms linear;
-  z-index: 2;
+  z-index: 3;
 
   &.xVisible {
-    height: 100px;
+    height: 120px;
+    position: fixed;
     h1 {
       font-size: 50px;
       color: $cosmic-cobalt;
       background: $goldenrod !important;
       -webkit-text-stroke: 1px $cosmic-cobalt;
       font-weight: 900;
+    }
+    h2 {
+      display: none;
     }
   }
 
@@ -39,6 +43,17 @@
     transform: translate(-50%, -50%);
     letter-spacing: 5px;
     padding: 10px 20px;
+  }
+  h2 {
+    color: $goldenrod;
+    font-size: 16px;
+    font-weight: 300;
+    width: 100%;
+    bottom: 20px;
+    position: absolute;
+    text-align: right;
+    box-sizing: border-box;
+    padding-right: 20px;
   }
 }
 
