add section + fix scroll

--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -3,7 +3,7 @@
 .faFooter {
   margin-top: 200px;
   background: $eerie-black;
-  padding: 10px 0;
+  padding: 10px 20px;
   font-size: 11px;
   > div {
     display: flex;
